config/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-sfs
spec:
  selector:
    matchLabels:
      sfs: postgresql-sfs # has to match .spec.template.metadata.labels
  serviceName: 'postgresql-svc'
  replicas: 1 # by default is 1
  template:
    metadata:
      labels:
        sfs: postgresql-sfs # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: postgresql-db
          image: postgres:15
          ports:
            - containerPort: 5432
              name: postgresql-port
          volumeMounts:
            - name: pv-postgresql-0-claim
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: pv-postgresql-0-claim
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 5Gi
