config/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-svc
  labels:
    sfs: postgresql-sfs
spec:
  ports:
    - port: 5432
      name: postgresql-port
  clusterIP: 
  selector:
    sfs: postgresql-sfs
