config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: spring-deployment.local  # Replace with your desired host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postgresql-svc
                port:
                  number: 5432
